added all form elements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <div class="form">
         <p class="form-header">Insert your email</p>
         <form action="#">
-          <input type="text">
+          <input type="text" placeholder="Your name">
+          <input type="email" placeholder="Your email">
+          <button class="button">Get instruction</button>
         </form>
       </div>
     </div>
