added second section elements and styles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
       </div>
     </div>
   </div>
+  <div class="section"></div>
+  <h2 class="features-header">Why you should start now</h2>
+  <div class="features">
+    <div class="col">
+      <img src="/img/feature-1.png" alt="">
+      <p class="features-text">First feature</p>
+    </div>
+    <div class="col">
+      <img src="/img/feature-2.png" alt="">
+      <p class="features-text">Second feature</p>
+    </div>
+    <div class="col">
+      <img src="/img/feature-3.png" alt="">
+      <p class="features-text">Third feature</p>
+    </div>
+    <div class="col">
+      <img src="/img/feature-4.png" alt="">
+      <p class="features-text">Fourth feature</p>
+    </div>
+  </div>
 </body>
 
 </html>
