added feautre button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form action="#">
           <input type="text" placeholder="Your name">
           <input type="email" placeholder="Your email">
-          <button class="button">Get instruction</button>
+          <button class="btn">Get instruction</button>
         </form>
       </div>
     </div>
@@ -47,6 +47,7 @@
       <p class="features-text">Fourth feature</p>
     </div>
   </div>
+  <div class="features-button"><button class="btn">Get instruction</button></div>
 </body>
 
 </html>
